tests/init/pos/case-class-apply.scala
case class Case(b: Base)

class Base {
  val n = 10
  val f = Case(this)

  val m = 10
}
